--- a/Assignment_3/A3_Rachith.ipynb
+++ b/Assignment_3/A3_Rachith.ipynb
@@ -543,7 +543,7 @@
     "\n",
     "* ### Maximum input size for algorithm2 for input kind 1. is 20000000. However, maximum input size algorithm2 for input kind 2. is 10 times greater, of the order 100000000. \n",
     "\n",
-    "*I adopted a trial and error strategy to get the maximum size of input and save computing power, instead of having to run through a range of input sizes whose bounds are not a-priori known.*\n"
+    "*I adopted a trial and error strategy to get the maximum size of input and save computing power, instead of having to run through a range of input sizes whose bounds are not a-priori known. There are also few stochastic fluctuations in the time when the same input size is run multiple times. But the **order** of magnitude of allowed input sizes does not chnage*\n"
    ],
    "metadata": {}
   },
