answered more questions

--- a/Assignment_4/A4_Rachith.ipynb
+++ b/Assignment_4/A4_Rachith.ipynb
@@ -3,15 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1 - Proposed solution is O(n) or O(nlogn) depending on sorting.\n",
+    "\n",
+    "```python\n",
+    "    Input sequence D1 and D2 of n elements\n",
+    "\n",
+    "    SORT D1 and D2 \n",
+    "    //O(nlogn) is attainable via heap sort if data does not meet assumptions \n",
+    "    //of counting, bucket or radix sort (O(n)) are not met\n",
+    "\n",
+    "    //get number of unique elements in D1 and D2, k_D1 and k_D2 respectively \n",
+    "    k_D1 = 0\n",
+    "    for i in 0 to len(D1):\n",
+    "         CONTINUE IF D1[i] == D1[i-1] ELSE k_D1 = k_D1 + 1 //O(n)\n",
+    "    k_D2 = 0\n",
+    "    for i in 0 to len(D2):\n",
+    "         CONTINUE if D2[i]==D2[i-1] ELSE k_D2 = kk_D2 + 1 //O(n)\n",
+    "    \n",
+    "    RETURN FALSE IF k_D1 != k_D2 ELSE \n",
+    "        INITIALISE \n",
+    "        arrays d1[0,1,2,....,k_D1], d2[0,1,2,...k_D2] \n",
+    "        d1[0],d2[0] = D1[0],D2[0]\n",
+    "        \n",
+    "        //making a sequence of unique elements of D1 (O(n))\n",
+    "        for i in 1 to len(D1):\n",
+    "            CHECK IF D1[i]==d1[i-1] ELSE d1[i]=D1[i] //O(1) operation\n",
+    "        //making a sequence of unique elements of D2 (O(n))\n",
+    "        for i in 1 to len(D2):\n",
+    "            CHECK IF D2[i]==d2[i-1] ELSE d2[i]=D2[i] //O(1) operation\n",
+    "\n",
+    "        for i in 0 to len(d1):\n",
+    "            RETURN FALSE IF d1[i]!=d2[i] ELSE TRUE //O(n) operation\n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q2  - sorting D in O(n) time. Incomplete but heading the right direction I think\n",
+    "\n",
+    "### Given n elements in an array. The maximum element is $n^2-1$. \n",
+    "### If it is known elements in this are uniformly distributed, then we can create n buckets each with one element in it. This is basically bucket sort. Since creating n buckets takes $O(n)$, this algorithm will then be $O(n)$.\n",
+    "\n",
+    "### However, what happens when data is not uniformly distributed? When the maximum element of an array is $O(n)$, then counting sort algorithm can sort it in $O(k+n)$ time. Given that maximum element is $O(n^2)$, an extension of counting sort is radix sort. \n",
+    "\n",
+    "### If there are n integers to sort, each integer has d digits, and each digit can take on up to k possible values, then radix sort can sort the numbers in $\\theta(d(n+k))$ time. When d is a constant and k is O.n/, radix sort runs in linear time.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q3 "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#python indexing starts at 0. Getting the left and right child of an index i\n",
     "def left(i):\n",
@@ -72,23 +134,16 @@
     "        max_heap(A,0,heap_size)\n",
     "        print(A)\n",
     "        "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "source": [
-    "# A = [28, 83, 94, 58, 69, 75, 34, 63, 55, 7, 35, 98, 11, 100, 57, 99, 16, 92, 5, 36]\n",
-    "D = [28, 83, 94, 58, 69, 75, 34, 63]\n",
-    "heap_sort(D)\n",
-    "D"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[94, 83, 75, 63, 69, 28, 34, 58]\n",
       "7\n",
@@ -115,21 +170,28 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[28, 34, 58, 63, 69, 75, 83, 94]"
       ]
      },
+     "execution_count": 98,
      "metadata": {},
-     "execution_count": 98
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# A = [28, 83, 94, 58, 69, 75, 34, 63, 55, 7, 35, 98, 11, 100, 57, 99, 16, 92, 5, 36]\n",
+    "D = [28, 83, 94, 58, 69, 75, 34, 63]\n",
+    "heap_sort(D)\n",
+    "D"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def counting_sort(A,k):\n",
     "    \"\"\"\n",
@@ -160,13 +222,13 @@
     "    #     C[A[j]] = C[A[j]] - 1\n",
     "\n",
     "    return B"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "i = 0\n",
     "q = 1\n",
@@ -175,55 +237,55 @@
     "    print(i,q)\n",
     "if q>0 and i>1:\n",
     "    print(i,q)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 191,
-   "source": [
-    "D = [5,2,6,5,2,1,2,3,4,5,8,0,2,3,2,16]\n",
-    "counting_sort(D,len(D))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0, 1, 2, 2, 2, 2, 2, 3, 3, 4, 5, 5, 5, 6, 8, 16]"
       ]
      },
+     "execution_count": 191,
      "metadata": {},
-     "execution_count": 191
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "D = [5,2,6,5,2,1,2,3,4,5,8,0,2,3,2,16]\n",
+    "counting_sort(D,len(D))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 185,
-   "source": [
-    "D = [5,2,6,5,2,1,2,3,4,5,8,0,2,3,2,16]\n",
-    "counting_sort(D,len(D))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0, 1, 2, 2, 2, 2, 2, 3, 3, 4, 0, 5, 5, 6, 8, 16]"
       ]
      },
+     "execution_count": 185,
      "metadata": {},
-     "execution_count": 185
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "D = [5,2,6,5,2,1,2,3,4,5,8,0,2,3,2,16]\n",
+    "counting_sort(D,len(D))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def insertion_sort(A):\n",
     "    \"\"\"\n",
@@ -238,35 +300,35 @@
     "            A[i+1] = A[i]\n",
     "            i = i - 1\n",
     "        A[i + 1] = key"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "D = [28, 83, 94, 58, 69, 75, 34, 63]\n",
-    "insertion_sort(D)\n",
-    "D"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[28, 34, 58, 63, 69, 75, 83, 94]"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "D = [28, 83, 94, 58, 69, 75, 34, 63]\n",
+    "insertion_sort(D)\n",
+    "D"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def bucket_sort(A):\n",
     "    \"\"\"\n",
@@ -282,25 +344,22 @@
     "    #putting elements into respective buckets\n",
     "    for i in range (0,n):\n",
     "        B[int(np.floor(n*A[i]))].append(A[i])\n",
+    "    #sorting elements in respective buckets\n",
     "    for i in range(0,n):\n",
     "        insertion_sort([B[i]])\n",
+    "    #concatenating sorted elements\n",
     "    for i in range(0,n):\n",
     "        if B[i]:\n",
     "            sorted_A.extend(B[i])\n",
     "    return sorted_A\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "source": [
-    "bucket_sort(list(np.random.uniform(size=10)))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0.11705099981995293,\n",
@@ -315,15 +374,20 @@
        " 0.9975986589391913]"
       ]
      },
+     "execution_count": 87,
      "metadata": {},
-     "execution_count": 87
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "bucket_sort(list(np.random.uniform(size=10)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def bucket_sort_integers(A):\n",
     "    \"\"\"\n",
@@ -339,88 +403,88 @@
     "    #putting elements into respective buckets\n",
     "    for i in range (0,n):\n",
     "        B[int(np.floor(A[i]/n))].append(A[i])\n",
+    "    #sorting elements in respective buckets\n",
     "    for i in range(0,n):\n",
     "        insertion_sort([B[i]])\n",
+    "    #concatenating sorted elements\n",
     "    for i in range(0,n):\n",
     "        if B[i]:\n",
     "            sorted_A.extend(B[i])\n",
     "    return sorted_A"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "source": [
-    "bucket_sort_integers(list(np.random.randint(0,100,10)))\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[5, 3, 23, 22, 36, 49, 42, 40, 69, 85]"
       ]
      },
+     "execution_count": 93,
      "metadata": {},
-     "execution_count": 93
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "bucket_sort_integers(list(np.random.randint(0,100,10)))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14.835938113180386,\n",
+       " 17.756328900734637,\n",
+       " 19.016047836726166,\n",
+       " 19.310894690340696,\n",
+       " 57.20490644994777,\n",
+       " 53.44072866107258,\n",
+       " 59.96818629829639,\n",
+       " 61.308010749659736,\n",
+       " 78.5485831205385,\n",
+       " 87.60000351998099]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D = (100 - 1) * np.random.random_sample(size=10) + 1\n",
     "bucket_sort_integers(list(D))"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[5.239672519868561,\n",
-       " 17.24712448489948,\n",
-       " 14.080735977195292,\n",
-       " 49.8053370505407,\n",
-       " 52.317471725884545,\n",
-       " 62.89017886261517,\n",
-       " 65.33831857741859,\n",
-       " 74.08890405921316,\n",
-       " 99.68718168036443,\n",
-       " 98.41202801590975]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 94
-    }
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "5e32c17b15a225dea6058845226a4c80c1a365e65777d5c14d0fccc08bcf000f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.7.4",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.4 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "5e32c17b15a225dea6058845226a4c80c1a365e65777d5c14d0fccc08bcf000f"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
