--- a/Assignment_4/A4_Rachith.ipynb
+++ b/Assignment_4/A4_Rachith.ipynb
@@ -16,7 +16,7 @@
     "## Q1 - Proposed solution is O(n) or O(nlogn) depending on sorting.\n",
     "\n",
     "```python\n",
-    "    Input sequence D1 and D2 of n elements\n",
+    "    INPUT sequence D1 and D2 of n elements\n",
     "\n",
     "    SORT D1 and D2 \n",
     "    //O(nlogn) is attainable via heap sort if data does not meet assumptions \n",
@@ -66,7 +66,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q3 "
+    "# Q3 - Check if two sequences share atleast one common element. Proposed O(nlogn). \n",
+    "# O(n) is attainable if we can come up with a hash table which stores counts of each element. O(n) to store counts of each elements from D to hash table. Then run through has thable to check if their values are not equal 1 (O(n)). Net O(n)\n",
+    "\n",
+    "```\n",
+    "    INPUT D\n",
+    "\n",
+    "    SORT D\n",
+    "    //O(nlogn) is attainable via heap sort if data does not meet assumptions \n",
+    "    //of counting, bucket or radix sort (O(n)) are not met\n",
+    "\n",
+    "    GET SIZE k = leng(D) //O(n) operation\n",
+    "\n",
+    "    //check if consecutive elements are equal (O(n))\n",
+    "    for i in range(0,k-1):\n",
+    "        if D[i+1] == D[i]\n",
+    "            RETURN TRUE\n",
+    "    RETURN FALSE\n",
+    "\n",
+    "    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q4 merge sort pending"
    ]
   },
   {
