--- a/Assignment_5/A5_Rachith.ipynb
+++ b/Assignment_5/A5_Rachith.ipynb
@@ -754,6 +754,89 @@
     "    cbar.ax.tick_params(labelsize=20) \n",
     "    cbar.ax.set_title('time taken(s)',fontsize=20)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 459,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 7 7 6\n",
+      "7 6 7 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([[0, 0, 0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 1, 1, 1],\n",
+       "  [0, 1, 1, 1, 1, 2, 2],\n",
+       "  [0, 1, 1, 2, 2, 2, 2],\n",
+       "  [0, 1, 1, 2, 2, 3, 3],\n",
+       "  [0, 1, 2, 2, 2, 3, 3],\n",
+       "  [0, 1, 2, 2, 3, 3, 4],\n",
+       "  [0, 1, 2, 2, 3, 4, 4]],\n",
+       " [['U', 'U', 'U', 'UL', 'L', 'UL'],\n",
+       "  ['UL', 'L', 'L', 'U', 'UL', 'L'],\n",
+       "  ['U', 'U', 'UL', 'L', 'U', 'U'],\n",
+       "  ['UL', 'U', 'U', 'U', 'UL', 'L'],\n",
+       "  ['U', 'UL', 'U', 'U', 'U', 'U'],\n",
+       "  ['U', 'U', 'U', 'UL', 'U', 'UL'],\n",
+       "  ['UL', 'U', 'U', 'U', 'UL', 'U']])"
+      ]
+     },
+     "execution_count": 459,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lcs(X,Y):\n",
+    "    m = len(X)\n",
+    "    n = len(Y)\n",
+    "\n",
+    "    #list of lists as B and C tables\n",
+    "\n",
+    "    # Initialize tables\n",
+    "    c = [[0]*(n+1) for x in range(m+1)]\n",
+    "    b = [[None]*(n) for x in range(m)]\n",
+    "    print(len(c),len(c[0]),m,n)\n",
+    "    print(len(b),len(b[0]),m,n)\n",
+    "\n",
+    "    for i in range(1,m+1):\n",
+    "        c[i][0] = 0\n",
+    "    for j in range(0,n+1):\n",
+    "        c[0][j] = 0\n",
+    "    for i in range(1,m+1):\n",
+    "        for j in range(1,n+1):\n",
+    "            if X[i-1] == Y[j-1]:\n",
+    "                c[i][j] = c[i-1][j-1] + 1\n",
+    "                b[i-1][j-1] = \"UL\"\n",
+    "            elif c[i-1][j] >= c[i][j-1]:\n",
+    "                c[i][j] = c[i-1][j]\n",
+    "                b[i-1][j-1] = \"U\"\n",
+    "            else:\n",
+    "                c[i][j] = c[i][j-1]\n",
+    "                b[i-1][j-1] = \"L\"\n",
+    "    return c,b\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "lcs ('abcbdab','bdcaba')\n"
+   ]
   }
  ],
  "metadata": {
