navigation of LCS

--- a/Assignment_5/A5_Rachith.ipynb
+++ b/Assignment_5/A5_Rachith.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [
     {
@@ -772,36 +772,16 @@
      "output_type": "stream",
      "text": [
       "8 7 7 6\n",
-      "7 6 7 6\n"
+      "7 6 7 6\n",
+      "b\n",
+      "c\n",
+      "b\n",
+      "a\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([[0, 0, 0, 0, 0, 0, 0],\n",
-       "  [0, 0, 0, 0, 1, 1, 1],\n",
-       "  [0, 1, 1, 1, 1, 2, 2],\n",
-       "  [0, 1, 1, 2, 2, 2, 2],\n",
-       "  [0, 1, 1, 2, 2, 3, 3],\n",
-       "  [0, 1, 2, 2, 2, 3, 3],\n",
-       "  [0, 1, 2, 2, 3, 3, 4],\n",
-       "  [0, 1, 2, 2, 3, 4, 4]],\n",
-       " [['U', 'U', 'U', 'UL', 'L', 'UL'],\n",
-       "  ['UL', 'L', 'L', 'U', 'UL', 'L'],\n",
-       "  ['U', 'U', 'UL', 'L', 'U', 'U'],\n",
-       "  ['UL', 'U', 'U', 'U', 'UL', 'L'],\n",
-       "  ['U', 'UL', 'U', 'U', 'U', 'U'],\n",
-       "  ['U', 'U', 'U', 'UL', 'U', 'UL'],\n",
-       "  ['UL', 'U', 'U', 'U', 'UL', 'U']])"
-      ]
-     },
-     "execution_count": 459,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def lcs(X,Y):\n",
+    "def lcs_tables(X,Y):\n",
     "    m = len(X)\n",
     "    n = len(Y)\n",
     "\n",
@@ -831,11 +811,58 @@
     "    return c,b\n",
     "\n",
     "\n",
+    "def  print_lcs(b,X,i,j):\n",
+    "    if (i == -1) or (j == -1):\n",
+    "        return\n",
+    "    if b[i][j] == 'UL':\n",
+    "        print_lcs(b,X,i-1,j-1)\n",
+    "        print(X[i])\n",
+    "    elif b[i][j] == 'U':\n",
+    "        print_lcs(b,X,i-1,j)\n",
+    "    else:\n",
+    "        print_lcs(b,X,i,j-1)\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "lcs ('abcbdab','bdcaba')\n"
+    "X = 'abcbdab'\n",
+    "Y = 'bdcaba'\n",
+    "c,b = lcs_tables(X,Y)\n",
+    "print_lcs(b,X,len(X)-1,len(Y)-1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[0, 0, 0, 0, 0, 0, 0],\n",
+       "  [0, 0, 0, 0, 1, 1, 1],\n",
+       "  [0, 1, 1, 1, 1, 2, 2],\n",
+       "  [0, 1, 1, 2, 2, 2, 2],\n",
+       "  [0, 1, 1, 2, 2, 3, 3],\n",
+       "  [0, 1, 2, 2, 2, 3, 3],\n",
+       "  [0, 1, 2, 2, 3, 3, 4],\n",
+       "  [0, 1, 2, 2, 3, 4, 4]],\n",
+       " [['U', 'U', 'U', 'UL', 'L', 'UL'],\n",
+       "  ['UL', 'L', 'L', 'U', 'UL', 'L'],\n",
+       "  ['U', 'U', 'UL', 'L', 'U', 'U'],\n",
+       "  ['UL', 'U', 'U', 'U', 'UL', 'L'],\n",
+       "  ['U', 'UL', 'U', 'U', 'U', 'U'],\n",
+       "  ['U', 'U', 'U', 'UL', 'U', 'UL'],\n",
+       "  ['UL', 'U', 'U', 'U', 'UL', 'U']])"
+      ]
+     },
+     "execution_count": 466,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c,b"
    ]
   }
  ],
