--- a/Assignment_5/A5_Rachith.ipynb
+++ b/Assignment_5/A5_Rachith.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 \n",
+    "## 1.1 Come up with D and P which is $\\Omega$(dp)\n",
     "\n",
     "Let text D be 'xxxxy' -> length, d = 5\n",
     "Let pattern P be 'y' -> length, p = 1\n",
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2"
+    "## 1.2 Modify Brute Force, Boyer Moore, KMP to find number of non overlapping sequences"
    ]
   },
   {
@@ -261,6 +261,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimental Analysis of the algorithms to find count of overlapping sequences\n",
+    "## Boyer Moore is the best. KMP and Brute force are comparable in the time taken\n",
+    "\n",
+    "\n",
+    "An average of 10 runs is taken for each size of pattern and text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 388,
    "metadata": {},
@@ -353,32 +364,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "df['p_size'] = p_size[0:415]\n",
-    "df['t_size'] = t_size[0:415]\n",
-    "df['bf_time'] = bf\n",
-    "df['bm_time'] = bm\n",
-    "df['kmp_time'] = kmp\n",
-    "# df['ensemble'] = e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 372,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle as pkl\n",
-    "with open(\"modified_running_times.pkl\",'wb') as f:\n",
-    "    pkl.dump(df,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 416,
    "metadata": {},
    "outputs": [
@@ -424,15 +409,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q2"
+    "# Q2 \n",
+    "\n",
+    "## Experimental Analysis of \n",
+    "- ## number of character comparisions of the algorithms - Boyer moore takes the least amount of character comparisons by KMP and Brute force.  \n",
+    "    ### However, I feel KMP will be much better when functioning on english words or realistic words rather than just random strings. I feel so because KMP, implicitly, exploits prefix-suffix structure which will be present in real words but not in random strings.  \n",
+    "   \n",
+    "    \n",
+    "- ## running times of the original algorithms - Boyer moore takes the least amount of time followed by KMP and Brute force\n",
+    "\n",
+    "An average of 10 runs is taken for each size of pattern and text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 913,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Modified functions for character comparisons\n",
+    "\n",
     "#Brute Force\n",
     "def cc_find_brute(T, P):\n",
     "    n, m = len(T), len(P)\n",
@@ -760,12 +756,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q3"
+    "# Q3 - Optimal paranthesization of matrix multiplication"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 914,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,11 +808,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 915,
    "metadata": {},
    "outputs": [],
    "source": [
     "#given an s table and the start matrix number (i) and end matrix number(j), print the optimal parenthesization\n",
+    "#implementation of the pseudocode from the text book with a few comments\n",
     "def print_optimal_parens(s,i,j):\n",
     "    if i == j:\n",
     "        print (\" A\"+str(i)+\" \",end='')\n",
@@ -994,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 916,
    "metadata": {},
    "outputs": [
     {
@@ -1007,6 +1004,7 @@
    ],
    "source": [
     "#idea is to recursively solve sub (optimisation) problems.\n",
+    "#implementation of the pseudocode from the textbook with a few comments\n",
     "def lcs_tables(X,Y):\n",
     "    m = len(X)\n",
     "    n = len(Y)\n",
@@ -1060,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 917,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1081,7 @@
        "  ['UL', 'U', 'U', 'U', 'UL', 'U']])"
       ]
      },
-     "execution_count": 466,
+     "execution_count": 917,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,8 +1092,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application on real world data obtained from [here](https://www.ncbi.nlm.nih.gov/protein/)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 918,
    "metadata": {},
    "outputs": [
     {
